syntax = "proto3";
option go_package = "internal/app/proto-rpc";

import "internal/app/proto/event.proto";

package vector;

message PushEventsRequest {
  repeated EventWrapper events = 1;
}

message PushEventsResponse {}

enum ServingStatus {
    SERVING = 0;
    NOT_SERVING = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  ServingStatus status = 1;
}

service Vector {
  rpc PushEvents(PushEventsRequest) returns (PushEventsResponse) {}

  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
