syntax = "proto3";
option go_package = "grpc/messages";

service MessageDispatchService {
  rpc ValidateAccessToken(ValidateAccessTokenIn) returns (ValidateAccessTokenOut) {}
  rpc GetAccessToken(GetClusterTokenIn) returns (GetClusterTokenOut) {}

  rpc SendActions (Empty) returns (stream Action) {}

  rpc ReceiveErrors(stream ErrorData) returns (Empty) {}
  rpc ReceiveResourceUpdates (stream ResourceUpdate) returns (Empty) {}
  rpc ReceiveInfraUpdates (stream InfraUpdate) returns (Empty) {}
  rpc ReceiveContainerRegistryUpdates (stream ContainerRegistryUpdate) returns (Empty) {}
  rpc ReceiveClusterUpdates (stream ClusterUpdate) returns (Empty) {}

  rpc Ping(Empty) returns (PingOutput) {}
}

message ValidateAccessTokenIn {
  string accountName = 1;
  string clusterName = 2;
  string accessToken = 3;
}

message ValidateAccessTokenOut {
  bool valid = 1;
}

message GetClusterTokenIn {
  string accountName = 1;
  string clusterName = 2;
  string clusterToken = 3;
}

message GetClusterTokenOut {
  string accessToken = 1;
}

message Action {
  bytes message = 1;
}

message ErrorData {
  bytes message = 1;
}

message ResourceUpdate {
  bytes message = 1;
}

message InfraUpdate {
  bytes message = 1;
}

message ContainerRegistryUpdate {
  bytes message = 1;
}

message ClusterUpdate {
  bytes message = 1;
}

message PingOutput {
  bool ok = 1;
}

message Empty {}
